# tiic_law_chat

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  uae_law_rag.db
docs/: DEVELOPMENT_GUIDE.md  DEV_QUICKSTART_M1.md
infra/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.full.yml
infra/milvus/: README.md  docker-compose.yml
playground/evaluator_gate/: test_evaluator_gate.py
playground/fastapi_gate/records/: node_preview_gate.py
playground/fastapi_gate/retrieval_strategy/: evidence_replay_gate.py  keyword_recall_auto_detail_gate.py  page_replay_gate.py  query_plan_kwrecall_auto_gate.py
playground/fastapi_gate/routers/: test_chat_router_gate.py  test_health_router_gate.py  test_ingest_router_gate.py  test_records_router_gate.py
playground/fastapi_gate/services/: test_chat_service_gate.py  test_chat_service_gate_retrieval_only.py  test_ingest_service_gate.py
playground/generation_gate/: test_generation_gate.py
playground/ingest_gate/: test_ingest_dry_run_gate.py  test_ingest_gate.py
playground/milvus_gate/: test_milvus_integration_gate.py
playground/retrieval_gate/: test_retrieval_gate.py
playground/schema_gate/: test_schema_gate.py
playground/sql_gate/: test_engine_gate.py  test_fts_gate.py  test_seed_default_kb_gate.py
src/uae_law_rag/: DEVELOP_GUIDE.md  config.py
src/uae_law_rag/backend/api/: deps.py  errors.py  middleware.py
src/uae_law_rag/backend/api/routers/: admin.py  chat.py  evaluator.py  health.py  ingest.py  records.py
src/uae_law_rag/backend/api/schemas_http/: _common.py  admin.py  chat.py  evaluator.py  ingest.py  records.py  records_page.py
src/uae_law_rag/backend/db/: engine.py  fts.py
src/uae_law_rag/backend/db/models/: __init__.py  doc.py  retrieval.py  run_config.py
src/uae_law_rag/backend/db/repo/: __init__.py  conversation_repo.py  document_repo.py  generation_repo.py  ingest_repo.py  message_repo.py  node_repo.py  retrieval_repo.py  run_config_repo.py  user_repo.py
src/uae_law_rag/backend/kb/: repo.py
src/uae_law_rag/backend/pipelines/base/: context.py  timing.py
src/uae_law_rag/backend/pipelines/evaluator/: checks.py  pipeline.py  query_plan.py  utils.py
src/uae_law_rag/backend/pipelines/generation/: generator.py  persist.py  pipeline.py  postprocess.py  prompt.py
src/uae_law_rag/backend/pipelines/ingest/: embed.py  pdf_parse.py  persist_db.py  persist_milvus.py  pipeline.py  segment.py
src/uae_law_rag/backend/pipelines/retrieval/: fusion.py  keyword.py  persist.py  pipeline.py  types.py  vector.py
src/uae_law_rag/backend/schemas/: audit.py  chat.py  evaluator.py  generation.py  ids.py  retrieval.py
src/uae_law_rag/backend/scripts/: backfill_node_article_id.py  init_db.py  init_fts.py  init_milvus.py  set_run_config.py
src/uae_law_rag/backend/services/: chat_service.py  generation_service.py  ingest_service.py
src/uae_law_rag/backend/utils/: artifacts.py  constants.py  errors.py  evidence.py  logging_.py
src/uae_law_rag/frontend/: package.json  vite-env.d.ts  vite.config.ts
src/uae_law_rag/frontend/src/: main.tsx
src/uae_law_rag/frontend/src/api/: client.ts  http.ts
src/uae_law_rag/frontend/src/api/endpoints/: chat.ts  ingest.ts
src/uae_law_rag/frontend/src/app/: App.tsx  routes.tsx
src/uae_law_rag/frontend/src/app/layout/: AppShell.tsx
src/uae_law_rag/frontend/src/app/providers/: AppProviders.tsx
src/uae_law_rag/frontend/src/config/: env.ts
src/uae_law_rag/frontend/src/fixtures/: mock_domain.ts
src/uae_law_rag/frontend/src/pages/chat/: ChatPage.tsx
src/uae_law_rag/frontend/src/pages/chat/components/ChatHistoryPanel/: ChatHistoryPanel.tsx
src/uae_law_rag/frontend/src/pages/chat/components/ChatHistoryPanel/MessageItem/: MessageItem.tsx  UserBubble.tsx
src/uae_law_rag/frontend/src/pages/chat/components/ChatHistoryPanel/MessageItem/AssistantBubble/: AnswerBlock.tsx  AssistantBubble.tsx  CitationList.tsx  DebugToggle.tsx  EvaluatorBadge.tsx
src/uae_law_rag/frontend/src/pages/chat/components/ErrorDrawer/: ErrorDrawer.tsx
src/uae_law_rag/frontend/src/pages/chat/components/EvidencePanel/: EvidencePanel.tsx  NodePreview.tsx  PageReplay.tsx  RetrievalHitsTable.tsx
src/uae_law_rag/frontend/src/pages/chat/components/InputPanel/: InputPanel.tsx
src/uae_law_rag/frontend/src/pages/chat/components/SystemNoticeBar/: SystemNoticeBar.tsx
src/uae_law_rag/frontend/src/pages/chat/containers/: ChatPageContainer.tsx
src/uae_law_rag/frontend/src/pages/chat/mock/: mock_chat_service.ts  mock_evidence_service.ts
src/uae_law_rag/frontend/src/pages/chat/mock/__tests__/: mock_evidence_service.test.ts
src/uae_law_rag/frontend/src/services/: chat_service.ts  conversation_service.ts  errors.ts  evidence_service.ts  normalize_chat.ts  service_mode.ts
src/uae_law_rag/frontend/src/services/__tests__/: conversation_service.test.ts  live_error_mapping.test.ts  live_smoke_contract.test.ts
src/uae_law_rag/frontend/src/stores/: chat_store.ts  use_chat_store.ts
src/uae_law_rag/frontend/src/stores/__tests__/: chat_store.test.ts  chat_store_notice.test.ts
src/uae_law_rag/frontend/src/styles/: globals.css
src/uae_law_rag/frontend/src/types/: index.ts
src/uae_law_rag/frontend/src/types/domain/: chat.ts  evidence.ts  gate.ts  index.ts  message.ts  run.ts  step.ts
src/uae_law_rag/frontend/src/types/http/: chat_history.ts  chat_response.ts  error_response.ts  index.ts  ingest_response.ts  json.ts  records_node_response.ts  records_page_response.ts  records_retrieval_response.ts
src/uae_law_rag/frontend/src/types/ui/: _gate_contract.ts  chat_view.ts  conversation_view.ts  evidence_view.ts  index.ts
src/uae_law_rag/frontend/src/ui/: index.ts
src/uae_law_rag/frontend/src/ui/components/: index.ts
src/uae_law_rag/frontend/src/ui/components/Drawer/: Drawer.tsx
src/uae_law_rag/frontend/src/utils/: assert.ts  format.ts  index.ts  logger.ts
